# plover_excel_dictionary

./: MANIFEST.in  README.md  README.rst  plover_excel_dictionary.py  setup.cfg  tox.ini
test/: test.ods  test.xlsx  test_excel_dict.py
