[metadata]
name = plover_excel_dictionary
version = 0.2.3
description = Excel dictionaries support for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_excel_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev1
	pyexcel>=0.4.5
	pyexcel-ods3>=0.3.2
	pyexcel-xlsx>=0.3.0
packages =
	.

[options.entry_points]
plover.dictionary =
	ods  = plover_excel_dictionary:ExcelDictionary
	xlsx = plover_excel_dictionary:ExcelDictionary

# vim: commentstring=#\ %s list
